# phantom-ai

./: README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-03-22-continuous-ocr-watcher.md  2026-03-22-token-usage-tracking.md
docs/superpowers/specs/: 2026-03-22-continuous-ocr-watcher-design.md  2026-03-22-token-usage-tracking-design.md
src/: App.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  capture.rs  clipboard_stealth.rs  commands.rs  display_stealth.rs  dodge.rs  env_report.rs  gemini.rs  hallucination.rs  lib.rs  main.rs  network_stealth.rs  process_stealth.rs  proctor_detect.rs  recording.rs  state.rs  stealth.rs  usage_db.rs  vad.rs  watcher.rs  whisper.rs
src/components/ConfigPanel/: ConfigPanel.css  ConfigPanel.tsx
src/components/MainPanel/: MainPanel.css  MainPanel.tsx
src/components/ResponsePanel/: ResponsePanel.css  ResponsePanel.tsx
src/components/TranscriptionPanel/: TranscriptionPanel.css  TranscriptionPanel.tsx
src/components/WelcomePanel/: WelcomePanel.css  WelcomePanel.tsx
src/components/shared/: GlassContainer.tsx  LoadingSpinner.tsx
src/hooks/: useConfig.ts  useGemini.ts  useRecording.ts  useTranscript.ts  useTranscription.ts  useWatcher.ts  useWhisperModel.ts
src/styles/: global.css  variables.css
web/: .gitignore  Dockerfile  index.html  pnpm-lock.yaml  script.js  styles.css
web/app/: animations.tsx  globals.css  layout.tsx  page.tsx
web/docs/: future-evolution-ideas.md
web/scripts/: build.sh
